--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
