* add mail submit

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "emailjs-com": "^3.1.0",
     "vue": "^2.6.11"
