--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+env:
+  VUE_APP_MAIL_ENDPOINT: ${{ secrets.VUE_APP_MAIL_ENDPOINT }}
 jobs:
   gh-pages-deploy:
     name: Deploying to Github Pages
