--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -18,6 +18,10 @@ jobs:
         run: npm i
       - name: Set Creds
         run: git config user.name "<username>" && git config user.email "<email>"
+      - name: create env file
+        run: |
+          touch .env
+          echo ENGINE_API_KEY =${{ secrets.ENGINE_API_KEY }} >> .env
       - name: Deploy
         run: npm run deploy
         env:
