--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -21,7 +21,9 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo ENGINE_API_KEY =${{ secrets.ENGINE_API_KEY }} >> .env
+          echo VUE_APP_MAIL_ENDPOINT =${{ secrets.VUE_APP_MAIL_ENDPOINT }} >> .env
+        env:
+          VUE_APP_MAIL_ENDPOINT: ${{ secrets.VUE_APP_MAIL_ENDPOINT }}
       - name: Deploy
         run: npm run deploy
         env:
