--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -21,9 +21,8 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo VUE_APP_MAIL_ENDPOINT=${{ secrets.VUE_APP_MAIL_ENDPOINT }} >> .env
-          echo ${{ secrets.VUE_APP_MAIL_ENDPOINT }}
-          echo VUE_APP_MAIL_ENDPOINT
+          echo VUE_APP_MAIL_ENDPOINT="$VUE_APP_MAIL_ENDPOINT" >> .env
+          cat .env
         env:
           VUE_APP_MAIL_ENDPOINT: ${{ secrets.VUE_APP_MAIL_ENDPOINT }}
       - name: Deploy
