--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "emailjs-com": "^3.1.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-click-outside": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
